fix(sideNav): project add and visibility not shown on hover

--- a/src/app/core-ui/magic-side-nav/nav-list/nav-list.component.scss
+++ b/src/app/core-ui/magic-side-nav/nav-list/nav-list.component.scss
@@ -17,6 +17,7 @@
   // Show additional buttons on hover (desktop)
   &:hover .additional-btns {
     opacity: 1;
+    visibility: visible !important;
   }
 }
 
